JumpScript/tests/baselines/reference/jsxFactoryIdentifierWithAbsentParameter.errors.txt
tests/cases/compiler/test.jmpx(9,17): error TS2304: Cannot find name 'createElement'.


==== tests/cases/compiler/test.jmpx (1 errors) ====
    declare module JSX {
        interface IntrinsicElements {
            [s: string]: any;
        }
    }
    
    export class AppComponent {
        render() {
            return <div />;
                    ~~~
!!! error TS2304: Cannot find name 'createElement'.
        }
    }
    